CAUSEWAY-4039: fixes up (disables some) unit tests for command replay